// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages view caps should render correctly on no cap expiry 1`] = `
<BaseLayout
  description="View and edit your caps."
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no cap expiry saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/selectCapExpiry"
        >
          Add cap expiry
        </a>
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <NoCapsCard />
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity is 24 hr 1`] = `
<BaseLayout
  description="View and edit your caps."
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="24hr"
          fareDayEnd=""
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity is fare day end 1`] = `
<BaseLayout
  description="View and edit your caps."
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="fareDayEnd"
          fareDayEnd="2323"
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;
